Fix several UI errors
The UI no longer appears as broken on boot. There are still 2 errors
caused by google maps not being properly initialized. This fix also has
the added benefit of bringing the boot time back to a reasonable time at
around 25 seconds

--- a/src/main/webapp/css/icons.css
+++ b/src/main/webapp/css/icons.css
@@ -11,33 +11,33 @@
 }
 
 .icon-earth.large-icon.teal {
-    background-image: url(../img/icons/entypo/22px/008080/earth.png);
+    background-image: url(../static/img/icons/entypo/22px/008080/earth.png);
 }
 
 .icon-map.large-icon.white {
-    background-image: url(../img/icons/entypo/22px/ffffff/map.png);
+    background-image: url(../static/img/icons/entypo/22px/ffffff/map.png);
 }
 
 .icon-database.large-icon.white {
-    background-image: url(../img/icons/entypo/22px/ffffff/database.png);
+    background-image: url(../static/img/icons/entypo/22px/ffffff/database.png);
 }
 
 .icon-phone,.icon-mobile,.icon-mouse,.icon-directions,.icon-mail,.icon-paperplane,.icon-pencil,.icon-feather,.icon-paperclip,.icon-drawer,.icon-reply,.icon-reply-all,.icon-forward,.icon-user,.icon-users,.icon-user-add,.icon-vcard,.icon-export,.icon-location,.icon-map,.icon-compass,.icon-location2,.icon-target,.icon-share,.icon-sharable,.icon-heart,.icon-heart2,.icon-star,.icon-star2,.icon-thumbs-up,.icon-thumbs-down,.icon-chat,.icon-comment,.icon-quote,.icon-house,.icon-popup,.icon-search,.icon-flashlight,.icon-printer,.icon-cog,.icon-tools,.icon-tag,.icon-moon,.icon-leaf,.icon-new,.icon-bag,.icon-clock,.icon-calendar,.icon-cd,.icon-air,.icon-hourglass,.icon-gauge,.icon-network,.icon-bucket,.icon-magnet,.icon-drive,.icon-cup,.icon-earth,.icon-browser,.icon-publish,.icon-sun,.icon-sun2,.icon-adjust,.icon-code,.icon-screen,.icon-infinity,.icon-light-bulb,.icon-database,.icon-clipboard,.icon-box,.icon-statistics,.icon-pie,.icon-bars,.icon-graph,.icon-checkmark,.icon-cross,.icon-cross2,.icon-erase,.icon-blocked,.icon-info,.icon-info2,.icon-question,.icon-help,.icon-list,.icon-trash,.icon-upload,.icon-download,.icon-arrow-left,.icon-arrow-down,.icon-arrow-up,.icon-arrow-right,.icon-arrow-left2,.icon-arrow-down2,.icon-arrow-up2,.icon-arrow-right2,.icon-arrow-left3,.icon-arrow-down3,.icon-arrow-up3,.icon-arrow-right3,.icon-arrow-left4,.icon-arrow-down4,.icon-arrow-up4,.icon-arrow-right4,.icon-arrow-left5,.icon-arrow-down5,.icon-arrow-up5,.icon-icon845,.icon-menu,.icon-ellipsis,.icon-cc,.icon-github,.icon-twitter,.icon-twitter2,.icon-facebook,.icon-facebook2 {
     display: inline-block;
     width: 16px;
     height: 16px;
-    background-image: url(../img/icons/entypo/16px/cccccc/sprites.png);
+    background-image: url(../static/img/icons/entypo/16px/cccccc/sprites.png);
     background-repeat: no-repeat;
     position:relative;
     top:3px;
 }
 
 .icon-white, .icon-hover-white:hover, .icon-white-no-hover {
-    background-image: url(../img/icons/entypo/16px/ffffff/sprites.png) !important;
+    background-image: url(../static/img/icons/entypo/16px/ffffff/sprites.png) !important;
 }
 
 .icon-white:hover, .icon-teal, .icon-hover-teal:hover {
-    background-image: url(../img/icons/entypo/16px/008080/sprites.png);
+    background-image: url(../static/img/icons/entypo/16px/008080/sprites.png);
 }
 
 .icon-phone {
